--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             background: linear-gradient(180deg, #87CEEB 0%, #98D8E8 50%, #191970 100%);
             margin: 0;
             padding: 0;
+            height: 100vh;
+            width: 100vw;
         }
         #gameCanvas { display: block; width: 100vw; height: 100vh; }
         #ui { position: absolute; top: 0; left: 0; right: 0; z-index: 100; }
@@ -104,6 +106,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simplex-noise@2.4.0/simplex-noise.min.js"></script>
-    <script src="game.js"></script>
+    <script src="/game.js"></script>
 </body>
 </html>
